--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,54 @@
-.App {
-  text-align: center;
+
+
+body{
+    text-align: center;
+    margin: 0px;
+    background: rgb(34,193,195);
+    background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
+    position:relative
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+.box{
+    margin-top: 250px;
+    border: 1px solid black;
+    background-color: #fdbb2d;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 400px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+button {
+    height: 70px;
+    background-color: #fff;
+    border-radius: 0;
+    border: 1px solid rgba(253,187,45,1);
+    background-color: orangered;
+    font-size: 20px;
+    color: rgb(0, 0, 0);    
+}
+button:hover{
+    background-color: cyan;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.result{
+    width: 100%;
+    font-size: 50px;
+    height: 100px;
+    border: none;
+    border-radius: 0;
+    background-color: #22c1c3;
+    color: #fff;
+    text-align: right;
+    padding-right: 20px;
+    padding-left: 10px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.keys {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
 }
