--- a/src/App.css
+++ b/src/App.css
@@ -1,43 +1,53 @@
 
-
 body{
+    display: flex;
+    justify-content: center;
     text-align: center;
     margin: 0px;
     background: rgb(34,193,195);
     background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
-    position:relative
+    position:relative;
+    font-family: 'Fira Sans',sans-serif;
+    background-repeat: no-repeat;
 }
-
 
 .box{
-    margin-top: 250px;
+    display: flex;
+    flex-flow: row wrap;
+    margin-top: 200px;
     border: 1px solid black;
-    background-color: #fdbb2d;
-    position: relative;
-    justify-content: center;
-    align-items: center;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 400px;
+    border-radius: 10px;
+    background: rgb(34,193,195);
+    background: linear-gradient(180deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
+    width: 500px;
+    height: 600px;
 }
 
+h1{
+    margin: 0px 0px 0px 3px;
+}
+
+
 button {
-    height: 70px;
+    height: 91px;
+    width: 80px;
     background-color: #fff;
-    border-radius: 0;
+    border-radius: 5px;
     border: 1px solid rgba(253,187,45,1);
-    background-color: orangered;
+    background: rgb(251,170,63);
+    background: radial-gradient(circle, rgba(251,170,63,1) 0%, rgba(70,252,233,1) 100%);
     font-size: 20px;
-    color: rgb(0, 0, 0);    
+    color: rgb(0, 0, 0);  
 }
 button:hover{
-    background-color: cyan;
+    background: rgb(70,252,233);
+    background: radial-gradient(circle, rgba(70,252,233,1) 0%, rgba(251,170,63,1) 100%);
+    cursor: pointer;
 }
 
 .result{
     width: 100%;
-    font-size: 50px;
+    font-size: 60px;
     height: 100px;
     border: none;
     border-radius: 0;
@@ -46,9 +56,26 @@ button:hover{
     text-align: right;
     padding-right: 20px;
     padding-left: 10px;
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
 
-.keys {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+.keyO{
+    display: flex;
+}
+.keyO button{
+    flex: 1 1 0%;
+    font-weight: 600;
+    font-size: 40px;
+}
+
+.keyN{
+    display: flex;
+    flex-wrap: wrap;
+}
+.keyN button{
+    flex: 1 1 33.3333%;
+    max-width: 33.3333%;
+    font-size: 50px;
+    font-weight: 300;
 }
